link images to information page. like button to alert message

--- a/Alexandros.html
+++ b/Alexandros.html
@@ -53,7 +53,7 @@
     <div class="inspectBar">
       <h1>Alexandros Amstelveen</h1>
       <div class="barContent">
-        <button onclick="window.open('https://alexandros.nl/', '_blank')">website</button>
+        <button onclick="window.open('https://alexandros.nl/', '_blank')">Booking Website</button>
         <button onclick="openTab(event, 'Favourites')" id="like"></button><img src="img/inspectAlexandrosPricing.png">
       </div>
     </div>
