--- a/main.html
+++ b/main.html
@@ -110,149 +110,149 @@
       <!-- Tab content -->
       <div id="Leisure" class="tabcontent">
         <div id="activity1">
-          <img src="img/destSchouwburg.jpg">
+          <img src="img/destSchouwburg.jpg" onclick="location.href='Alexandros.html'">
           <h4>Schouwburg Amstelveen</h4>
           <p class="dutch"> Het mooiste theater en film aanbod uit de regio. Van toneel tot cabaret, van opera tot jeugdtheater.</p>
           <p class="english"> The most beautiful theater and film offer in the region. From theater to cabaret, from opera to youth theatre.</p>
           <button id="book" onclick="window.open('https://schouwburgamstelveen.nl/nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity2">
-  <img src="img/destAmsterdamseBos.jpg">
+  <img src="img/destAmsterdamseBos.jpg" onclick="location.href='Alexandros.html'">
   <h4>Amsterdamse Bos</h4>
   <p class="dutch">Het Amsterdamse Bos is een tussen 1934 en 1970 aangelegd bos ten zuidwesten van Amsterdam dat ligt tussen de Ringvaart en Amstelveen. Het Amsterdamse Bos ter grootte van 935 hectare ligt vrijwel geheel in de gemeente Amstelveen.</p>
   <p class="english">The Amsterdamse Bos is a forest built between 1934 and 1970 southwest of Amsterdam that lies between the Ringvaart and Amstelveen. The Amsterdamse Bos, with a size of 935 hectares, is located almost entirely in the municipality of Amstelveen.</p>
   <button id="book" onclick="window.open('https://www.amsterdamsebos.nl/', '_blank')">Redirect to the website</button>
-  <button id="like" onclick="openTab(event, 'Favourites')"></button>
+  <button id="like" onclick="alert('Your like has been added to the list!')"></button>
 </div>
 <div id="activity3">
-          <img src="img/destSpokk.jpg">
+          <img src="img/destSpokk.jpg" onclick="location.href='Alexandros.html'">
           <h4>Spokk</h4>
           <p class="dutch">Al 15 jaar geven we met SPOKK een unieke lasergame ervaring: Eerst in Amstelveen ... Met high-tech guns en als je het aankunt… de spectaculaire SPOKK Arena!</p>
           <p class="english">For 15 years we have been giving a unique laser game experience with SPOKK: First in Amstelveen ... With high-tech guns and if you can handle it ... the spectacular SPOKK Arena!</p>
           <button id="book" onclick="window.open('https://www.spokk.nl/', '_blank')">Redirect to the website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity4">
-  <img src="img/destDeKegel.jpg">
+  <img src="img/destDeKegel.jpg" onclick="location.href='Alexandros.html'">
   <h4>De Kegel</h4>
   <p class="dutch">Bowlen, drinken, eten, vergaderen, feesten en partijen bij Bowling de Kegel in Amstelveen! Informeer of boek makkelijk direct online.</p>
   <p class="english">Bowling, drinking, eating, meeting, partying and parties at Bowling de Kegel in Amstelveen! Inquire or book easily directly online.</p>
   <button id="book" onclick="window.open('https://www.bowlingdekegel.nl/', '_blank')">Redirect to the website</button>
-  <button id="like" onclick="openTab(event, 'Favourites')"></button>
+  <button id="like" onclick="alert('Your like has been added to the list!')"></button>
 </div>
       </div>
 
       <div id="Restaurants" class="tabcontent">
         <div id="activity1">
-          <img src="img/destAlexandros.jpg">
+          <img src="img/destAlexandros.jpg" onclick="location.href='Alexandros.html'">
           <h4>Alexandros</h4>
           <p class="dutch">In 1988 openden wij, de familie Ganatsios, onze deuren in het mooie Amstelveen. Onze passie is sindsdien onveranderd: het creëren van een onvergetelijke ervaring voor onze gasten.</p>
           <p class="english">In 1988 we, the Ganatsios family, opened our doors in beautiful Amstelveen. Our passion has remained unchanged ever since: creating an unforgettable experience for our guests.</p>
           <button id="book" onclick="window.open('https://alexandros.nl/', '_blank')">Redirect to the website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity2">
-          <img src="img/destFierro.jpg">
+          <img src="img/destFierro.jpg" onclick="location.href='Alexandros.html'">
           <h4>Fierro</h4>
           <p class="dutch">Of u nu alleen of samen, met of zonder kinderen of met een gezelschap bent, bij Fierro heeft u altijd een bijzondere avond.</p>
           <p class="english">Whether you are alone or together, with or without children or with a group, you always have a special evening at Fierro.</p>
           <button id="book" onclick="window.open('https://fierro.nl/', '_blank')">Redirect to the website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity3">
-  <img src="img/destColijn.jpg">
+  <img src="img/destColijn.jpg" onclick="location.href='Alexandros.html'">
   <h4>Restaurant Colijn</h4>
   <p class="dutch">Restaurant Colijn is een eigentijds en sfeervol restaurant dat centraal gelegen is in Amstelveen met aan de achterzijde een prachtig uitzicht op het Amsterdamse Bos.</p>
   <p class="english">Restaurant Colijn is a contemporary and attractive restaurant that is centrally located in Amstelveen with a beautiful view of the Amsterdamse Bos at the rear.</p>
   <button id="book" onclick="window.open('https://www.restaurantcolijn.nl/', '_blank')">Redirect to the website</button>
-  <button id="like" onclick="openTab(event, 'Favourites')"></button>
+  <button id="like" onclick="alert('Your like has been added to the list!')"></button>
 </div>
 <div id="activity4">
-  <img src="img/destKokusai.jpg">
+  <img src="img/destKokusai.jpg" onclick="location.href='Alexandros.html'">
   <h4>Kokusai</h4>
   <p class="dutch">Kokusai is Japans voor internationaal. Iedereen is welkom en onze kaart is geïnspireerd op de Japanse en Chinese keuken. Naast Sushi kunt u ook onbeperkt genieten van onze heerlijke grill- en wokspecialiteiten.</p>
   <p class="english">Kokusai is Japanese for international. Everyone is welcome and our menu is inspired by Japanese and Chinese cuisine. In addition to Sushi, you can also enjoy our delicious grill and wok specialties without restriction.</p>
   <button id="book" onclick="window.open('https://restaurantkokusai.nl/', '_blank')">Redirect to the website</button>
-  <button id="like" onclick="openTab(event, 'Favourites')"></button>
+  <button id="like" onclick="alert('Your like has been added to the list!')"></button>
 </div>
       </div>
 
       <div id="Transportation" class="tabcontent">
         <div id="activity1">
-          <img src="img/destNS.png">
+          <img src="img/destNS.png" onclick="location.href='Alexandros.html'">
           <h4>NS</h4>
           <p class="dutch">Reisplanner voor binnenlandse en internationale treinreizen, informatie over prijzen van treinkaartjes en abonnementen, tips voor dagjes uit en informatie. </p>
           <p class="english">Travel planner for domestic and international train journeys, information about train ticket prices and subscriptions, tips for days out and information. </p>
           <button id="book" onclick="window.open('https://www.ns.nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity2">
-          <img src="img/destGVB.png">
+          <img src="img/destGVB.png" onclick="location.href='Alexandros.html'">
           <h4>GVB</h4>
           <p class="dutch">GVB is de openbaar vervoerder van Amsterdam. Informatie over routes, reisproducten, tarieven, vertrektijden en omleidingen.</p>
           <p class="english">GVB is the public transport company of Amsterdam. Information about routes, travel products, fares, departure times and diversions.</p>
           <button id="book" onclick="window.open('https://www.gvb.nl/', '_blank')">Redirect to the website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity3">
-          <img src="img/destOV9292.png">
+          <img src="img/destOV9292.png" onclick="location.href='Alexandros.html'">
           <h4>OV9292</h4>
           <p class="dutch">9292 is het online platform voor al het openbaar & deelvervoer in Nederland met actuele reisinformatie & e-tickets. </p>
           <p class="english">9292 is the online platform for all public & shared transport in the Netherlands with up-to-date travel information & e-tickets. </p>
           <button id="book" onclick="window.open('https://9292.nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity4">
-          <img src="img/destSchiphol.jpg">
+          <img src="img/destSchiphol.jpg" onclick="location.href='Alexandros.html'">
           <h4>Schiphol</h4>
           <p class="dutch"> Alles over je vlucht, bagage en reizen tijdens corona via Amsterdam Airport Schiphol vind je hier. Zo ga je goed voorbereid op reis. Fijne vlucht!</p>
           <p class="english"> Everything about your flight, luggage and travel during corona via Amsterdam Airport Schiphol can be found here. This way you are well prepared for your trip. Have a nice flight!</p>
           <button id="book" onclick="window.open('https://www.schiphol.nl/nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
       </div>
 
       <div id="Hotels" class="tabcontent">
         <div id="activity1">
-          <img src="img/destStationAmstelveen.jpg">
+          <img src="img/destStationAmstelveen.jpg" onclick="location.href='Alexandros.html'">
           <h4>Station Amstelveen</h4>
           <p class="dutch">Wij ontvangen u graag voor een verblijf in het unieke en historische Station Amstelveen, dat dateert uit 1915. Recentelijk hebben wij het station omgebouwd tot de charmante bed en breakfast Amstelveen. </p>
           <p class="english">We would like to welcome you for a stay in the unique and historic Station Amstelveen, which dates from 1915. We recently converted the station into the charming bed and breakfast Amstelveen. </p>
           <button id="book" onclick="window.open('https://www.stationamstelveen.nl/nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity2">
-          <img src="img/destGrandhotelAmstelveen.jpg">
+          <img src="img/destGrandhotelAmstelveen.jpg" onclick="location.href='Alexandros.html'">
           <h4>Grandhotel Amstelveen</h4>
           <p class="dutch">Zoekt u een viersterrenhotel in Amstelveen met uitstekende service en goed slaapcomfort? Boek rechtstreeks een kamer bij Grand Hotel Amstelveen! </p>
           <p class="english">Are you looking for a four-star hotel in Amstelveen with excellent service and good sleeping comfort? Book a room directly at Grand Hotel Amstelveen! </p>
           <button id="book" onclick="window.open('https://www.grandhotelamstelveen.nl/', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity3">
-          <img src="img/destBestWesternPlus.jpg">
+          <img src="img/destBestWesternPlus.jpg" onclick="location.href='Alexandros.html'">
           <h4>Best Western Plus</h4>
           <p class="dutch">Het Best Western Plus Hotel Amstelveen is een gloednieuw hotel met 99 kamers en suites. De lichte en kleurrijke kamers zijn uitgerust met alles wat u tegenwoordig in een hotelkamer verwacht. </p>
           <p class="english">The Best Western Plus Hotel Amstelveen is a brand new hotel with 99 rooms and suites. The bright and colorful rooms are equipped with everything you expect in a hotel room these days. </p>
           <button id="book" onclick="window.open('https://www.bestwestern.nl/booking-path/hotel-details/best-western-plus-hotel-amstelveen-amstelveen-92743', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
 <div id="activity4">
-          <img src="img/destIbis.jpg">
+          <img src="img/destIbis.jpg" onclick="location.href='Alexandros.html'">
           <h4>Ibis budget</h4>
           <p class="dutch">Droom lekker weg in onze ibis Budget hotels in Amstelveen. Betaalbare hotels, onbeperkt ontbijt. Boek uw kamer bij ibis Budget Amstelveen. Real-time beschikbaarheid. Budgethotels. </p>
           <p class="english">Dream away in our ibis Budget hotels in Amstelveen. Affordable hotels, unlimited breakfast. Book your room at ibis Budget Amstelveen. Real time availability. Budget hotels. </p>
           <button id="book" onclick="window.open('https://all.accor.com/hotel/A3P2/index.nl.shtml', '_blank')">Redirect to the
             website</button>
-          <button id="like" onclick="openTab(event, 'Favourites')"></button>
+          <button id="like" onclick="alert('Your like has been added to the list!')"></button>
         </div>
       </div>
 
