--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
         </div>
 
         <div class="indexPage" id="ranges">
-          <h3 class="english hiddenfilters">Rating</h3>
-          <h3 class="dutch hiddenfilters">Beoordeling</h3>
+          <h3 class="english">Rating</h3>
+          <h3 class="dutch">Beoordeling</h3>
           <input type="range" min="0" max="5" value="1" step="0.5" id="ratingRange">
           <p><span id="rangeValue"></span> <span class="english">stars</span><span class="dutch">sterren</span></p>
 
-          <h3 class="english hiddenfilters">Distance</h3>
-          <h3 class="dutch hiddenfilters">Afstand</h3>
+          <h3 class="english">Distance</h3>
+          <h3 class="dutch">Afstand</h3>
           <input type="range" min="0" max="20" value="5" step="0.5" id="distanceRange">
           <p><span id="distanceValue"></span> km</p>
 
